Pull request #157: fix white menu in dark theme
Merge in EXTENSIONS/browser-extension-v3 to master

Squashed commit of the following:

commit e3f970bffb507ecffaad54ea469b42fa0215aedf
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Sep 12 13:17:13 2022 +0300

    AG-16203 fix white menu in dark theme

--- a/src/common/components/ui/TooltipIcon/TooltipIcon.module.pcss
+++ b/src/common/components/ui/TooltipIcon/TooltipIcon.module.pcss
@@ -1,9 +1,10 @@
 .tooltip {
     font-size: 1rem;
-    color: var(--gray4d);
     letter-spacing: 0;
+    border: 1px solid var(--gray700);
     text-align: right;
-    background-color: var(--white);
+    background-color: var(--black);
     width: 200px;
+    padding: 8px 0;
     z-index: var(--z_2);
 }
