--- a/src/popup/components/Header/Header.module.pcss
+++ b/src/popup/components/Header/Header.module.pcss
@@ -39,13 +39,13 @@
     line-height: 1.25rem;
     width: 100%;
     text-align: left;
-    color: var(--gray4d);
+    color: var(--grayf3);
     letter-spacing: 0;
     cursor: pointer;
     text-decoration: none;
 
     &:hover {
-        background: var(--grayf3);
+        background: var(--gray4d);
     }
 
     &:disabled {
